src/less/wolf3d.less
@import "base";

html {
  padding : 0;
  background-color : black;
}

body {
  margin : 0;
  padding : 0;
  -webkit-touch-callout:none;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -webkit-text-size-adjust: none;

  -webkit-user-select:none;
  -moz-user-select:none;
  -ms-user-select:none;
  user-select:none;

  width : 100%;
  height : 100%;

  background-color : black;
  text-align : center;
}

.load-progress {
  position : absolute;
  left : 0;
  bottom : 0;
  height : 5px;
  width : 0;
  background-color : #666;
}


#main {
  position : absolute;
  width : 640px;
  height : 400px;
  left : 50%;
  top : 50%;
  margin-left : -320px;
  margin-top : -200px;
  overflow : hidden;
}

#game, #menu, #title-screen {
  position : absolute;
  left : 0;
  top : 0;
  width : 100%;
  height : 100%;
  display : none;
  background-repeat : no-repeat;
}

#title-screen {
  background-image : url(../assets/art/title.png);
  display : block;
}

#game {
  background-color : rgb(0,56,56);
  background-image : url(../assets/art/gamebg.png);
}



#game .loading {
  background-color : rgb(0,56,56);
  display : none;
  position : absolute;
  left : 0;
  top : 0;
  width : 100%;
  height : 320px;
  z-index : 60;
}
#game .loading img {
  position : absolute;
  left : 50%;
  top : 50%;
  margin-left : -224px;
  margin-top : -48px;
}


#game .renderer {
  z-index : 50;
  background-color : #222;
  overflow : hidden;
  position : absolute;
  left : 16px;
  top : 8px;
  cursor : crosshair;
}

#game *,
#game .renderer div,
#game .renderer div img,
#game .renderer .sprite,
#game .renderer .sprite img {
  image-rendering : optimizeSpeed;
  image-rendering : -moz-crisp-edges;
  image-rendering : -o-crisp-edges;
  image-rendering : optimize-contrast;
  image-rendering : -webkit-optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
}

#game .renderer .player-weapon {
  z-index : 100000000;
  width : 256px;
  height : 256px;
  position : absolute;
  bottom : 0;
  left : 50%;
  margin-left : -128px;
  background-image : url(../assets/art/attack.png);
  background-repeat : no-repeat;
}


#game .renderer .overlay {
  z-index : 200000000;
  width : 100%;
  height : 100%;
  position : absolute;
  top : 0;
  left : 0;
  display : none;
}

#game .renderer .damage-flash {
  background : rgba(255,0,0,0.25);
}
#game .renderer .bonus-flash {
  background : rgba(255,255,128,0.20);
}
#game .renderer .death {
  background : rgba(255,0,0,0);
}

#game .renderer .pause {
  background : rgba(32,32,32,0.5);
}
#game .renderer .pause img {
  position : absolute;
  left : 50%;
  top : 50%;
  margin-left : -64px;
  margin-top : -32px;
}


#game .ceiling, #game .floor {
  position : absolute;
  z-index : 0;
  left : 0;
  width : 100%;
  height : 50%;
}

#game .ceiling {
  top : 0;
}

#game .floor{
  top : 50%;
}

#game .hud {
  position : absolute;
  z-index : 100;
  bottom : 0;
  width : 640px;
  height : 80px;
  background-image : url(../assets/art/hudbg.png);
}

#game .hud .bj {
  position : absolute;
  width : 48px;
  height : 64px;
  left : 273px;
  top : 9px;
  overflow : hidden;
  background-image : url(../assets/art/bj.png);
}

#game .hud .key1,
#game .hud .key2 {
  position : absolute;
  width : 16px;
  height : 32px;
  left : 480px;
  overflow : hidden;
  background-image : url(../assets/art/hudkeys.png);
}

#game .hud .key1 {
  top : 8px;
}
#game .hud .key2 {
  top : 40px;
  background-position : -16px 0;
}


#game .hud .weapon {
  position : absolute;
  width : 96px;
  height : 48px;
  left : 512px;
  top : 16px;
  overflow : hidden;
  background-image : url(../assets/art/hudweapons.png);
}

#game .hud .number-container {
  position : absolute;
  height : 32px;
  top : 32px;
}

#game .hud .floor { //TODO: conflict with floor
  left : 48px;
  width: auto;
}
#game .hud .score {
  left : 96px;
}
#game .hud .lives {
  left : 224px;
}
#game .hud .health {
  left : 336px;
}
#game .hud .ammo {
  left : 428px;
}


#game .hud .number {
  display : inline-block;
  width : 16px;
  height : 32px;
  overflow : hidden;
  margin : 0;
  background-image : url(../assets/art/hudnumbers.png);
  background-repeat : no-repeat;
}

#game .fps {
  position : absolute;
  display : none;
  z-index : 1000;
  left : 20px;
  top : 15px;
  font-family: "Courier New", monospace;
  font-size : 16px;
  background : rgba(0,0,0,0.3);
  color : rgb(200,200,200);
  padding : 5px;
}


#text-screen {
  background-color : #8a0000;
  position : absolute;
  height : 100%;
  width : 100%;
  left : 0;
  top : 0;
  z-index : 500;
  display : none;
}

#game .intermission,
#game .gameover {
  position : absolute;
  height : 100%;
  width : 100%;
  left : 0;
  top : 0;
  background-color : #004141;
  display : none;
}

#game .gameover {
  background-image : url(../assets/art/intermission_gameover.png);
}

#game .intermission > div {
  position : absolute;
}

#game .intermission .background,
#game .intermission .background-secret,
#game .intermission .background-victory {
  position : absolute;
  background-image : url(../assets/art/intermission.png);
  height : 100%;
  width : 100%;
  left : 0;
  top : 0;
  z-index : 0;
  display : none;
}
#game .intermission .background-secret {
  background-image : url(../assets/art/intermission_secret.png);
}
#game .intermission .background-victory {
  background-image : url(../assets/art/intermission_victory.png);
}

#game .intermission .bj {
  left : 40px;
  top : 32px;
  width : 162px;
  height : 174px;
  background-image : url(../assets/art/intermissionbj.png);
  overflow : hidden;
  z-index : 10;
}

#game .intermission .stat,
#game .intermission .victory-stat {
  z-index : 10;
}

#game .intermission .bonus {
  left : 412px;
  top : 108px;
}

#game .intermission .floor {
  left : 412px;
  top : 32px;
}


#game .intermission .total-time-minutes {
  top : 128px;
  left : 224px;
}

#game .intermission .total-time-seconds {
  top : 128px;
  left : 306px;
}
/* ... */

